k8s/new/overlays/dev/ci/ingress-event-listner.yaml
---
actions:
  to: kubernetes/overlays/dev/ci/ingress-event-listener.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-event-listner
  namespace: tekton-pipelines
spec:
  rules:
  - host: event-listner.tanzudemo.frankcarta.com
    http:
      paths:
      - backend:
          serviceName: el-harbor-listener-interceptor
          servicePort: 8080
